--- a/translations/validators.de.xlf
+++ b/translations/validators.de.xlf
@@ -1,39 +1,77 @@
-<?xml version="1.0"?>
-<xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-    <file source-language="en" target-language="de" datatype="plaintext" original="file.ext">
-        <body>
-        <trans-unit id="post.blank_summary">
-            <source>post.blank_summary</source>
-            <target>Gib deinem Beitrag eine Zusammenfassung!</target>
-        </trans-unit>
-        <trans-unit id="post.blank_content">
-            <source>post.blank_content</source>
-            <target>Dein Beitrag sollte einen Inhalt haben!</target>
-        </trans-unit>
-        <trans-unit id="post.too_short_content">
-            <source>post.too_short_content</source>
-            <target>Der Beitragsinhalt ist zu kurz (mindestens {{ limit }} Zeichen)</target>
-        </trans-unit>
-        <trans-unit id="comment.blank">
-            <source>comment.blank</source>
-            <target>Bitte gib einen Kommentar ein!</target>
-        </trans-unit>
-        <trans-unit id="comment.too_short">
-            <source>comment.too_short</source>
-            <target>Der Kommentar ist zu kurz (mindestens {{ limit }} Zeichen)</target>
-        </trans-unit>
-        <trans-unit id="comment.too_long">
-            <source>comment.too_long</source>
-            <target>Der Kommentar ist zu lang (maximal {{ limit }} Zeichen)</target>
-        </trans-unit>
-        <trans-unit id="comment.is_spam">
-            <source>comment.is_spam</source>
-            <target>Der Inhalt des Kommentars wird als Spam eingestuft.</target>
-        </trans-unit>
-        <trans-unit id="post.too_many_tags">
-            <source>post.too_many_tags</source>
-            <target>Zu viele Tags (höchstens {{ limit }} Tags sind erlaubt)</target>
-        </trans-unit>
-        </body>
-    </file>
+<?xml version="1.0" encoding="utf-8"?>
+<xliff xmlns="urn:oasis:names:tc:xliff:document:2.0" version="2.0" srcLang="en" trgLang="de">
+  <file id="validators.de">
+    <unit id="TG1D5NO" name="post.blank_summary">
+      <notes>
+        <note category="state" priority="1">obsolete</note>
+      </notes>
+      <segment>
+        <source>post.blank_summary</source>
+        <target>Gib deinem Beitrag eine Zusammenfassung!</target>
+      </segment>
+    </unit>
+    <unit id="BZOzjk." name="post.blank_content">
+      <notes>
+        <note category="state" priority="1">obsolete</note>
+      </notes>
+      <segment>
+        <source>post.blank_content</source>
+        <target>Dein Beitrag sollte einen Inhalt haben!</target>
+      </segment>
+    </unit>
+    <unit id="S6M.YWY" name="post.too_short_content">
+      <notes>
+        <note category="state" priority="1">obsolete</note>
+      </notes>
+      <segment>
+        <source>post.too_short_content</source>
+        <target>Der Beitragsinhalt ist zu kurz (mindestens {{ limit }} Zeichen)</target>
+      </segment>
+    </unit>
+    <unit id="ARUoKOV" name="comment.blank">
+      <notes>
+        <note category="state" priority="1">obsolete</note>
+      </notes>
+      <segment>
+        <source>comment.blank</source>
+        <target>Bitte gib einen Kommentar ein!</target>
+      </segment>
+    </unit>
+    <unit id="J.L_ppQ" name="comment.too_short">
+      <notes>
+        <note category="state" priority="1">obsolete</note>
+      </notes>
+      <segment>
+        <source>comment.too_short</source>
+        <target>Der Kommentar ist zu kurz (mindestens {{ limit }} Zeichen)</target>
+      </segment>
+    </unit>
+    <unit id=".bkQKXb" name="comment.too_long">
+      <notes>
+        <note category="state" priority="1">obsolete</note>
+      </notes>
+      <segment>
+        <source>comment.too_long</source>
+        <target>Der Kommentar ist zu lang (maximal {{ limit }} Zeichen)</target>
+      </segment>
+    </unit>
+    <unit id="cTT8h4_" name="comment.is_spam">
+      <notes>
+        <note category="state" priority="1">obsolete</note>
+      </notes>
+      <segment>
+        <source>comment.is_spam</source>
+        <target>Der Inhalt des Kommentars wird als Spam eingestuft.</target>
+      </segment>
+    </unit>
+    <unit id="niM7JYj" name="post.too_many_tags">
+      <notes>
+        <note category="state" priority="1">obsolete</note>
+      </notes>
+      <segment>
+        <source>post.too_many_tags</source>
+        <target>Zu viele Tags (höchstens {{ limit }} Tags sind erlaubt)</target>
+      </segment>
+    </unit>
+  </file>
 </xliff>
