--- a/translations/validators.fr.xlf
+++ b/translations/validators.fr.xlf
@@ -1,35 +1,68 @@
-<?xml version="1.0"?>
-<xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-    <file source-language="en" target-language="fr" datatype="plaintext" original="file.ext">
-        <body>
-            <trans-unit id="post.blank_summary">
-                <source>post.blank_summary</source>
-                <target>Veuillez donner un résumé à votre post.</target>
-            </trans-unit>
-            <trans-unit id="post.blank_content">
-                <source>post.blank_content</source>
-                <target>Veuillez donner un contenu à votre post.</target>
-            </trans-unit>
-            <trans-unit id="post.too_short_content">
-                <source>post.too_short_content</source>
-                <target>Le contenu de votre post est trop court ({{ limit }} caractères minimum)</target>
-            </trans-unit>
-            <trans-unit id="comment.blank">
-                <source>comment.blank</source>
-                <target>Veuillez ne pas laisser votre commentaire vide.</target>
-            </trans-unit>
-            <trans-unit id="comment.too_short">
-                <source>comment.too_short</source>
-                <target>Votre commentaire est trop court ({{ limit }} caractères minimum)</target>
-            </trans-unit>
-            <trans-unit id="comment.too_long">
-                <source>comment.too_long</source>
-                <target>Votre commentaire est trop long ({{ limit }} caractères maximum)</target>
-            </trans-unit>
-            <trans-unit id="comment.is_spam">
-                <source>comment.is_spam</source>
-                <target>Le contenu de votre commentaire est considéré comme du spam.</target>
-            </trans-unit>
-        </body>
-    </file>
+<?xml version="1.0" encoding="utf-8"?>
+<xliff xmlns="urn:oasis:names:tc:xliff:document:2.0" version="2.0" srcLang="en" trgLang="fr">
+  <file id="validators.fr">
+    <unit id="TG1D5NO" name="post.blank_summary">
+      <notes>
+        <note category="state" priority="1">obsolete</note>
+      </notes>
+      <segment>
+        <source>post.blank_summary</source>
+        <target>Veuillez donner un résumé à votre post.</target>
+      </segment>
+    </unit>
+    <unit id="BZOzjk." name="post.blank_content">
+      <notes>
+        <note category="state" priority="1">obsolete</note>
+      </notes>
+      <segment>
+        <source>post.blank_content</source>
+        <target>Veuillez donner un contenu à votre post.</target>
+      </segment>
+    </unit>
+    <unit id="S6M.YWY" name="post.too_short_content">
+      <notes>
+        <note category="state" priority="1">obsolete</note>
+      </notes>
+      <segment>
+        <source>post.too_short_content</source>
+        <target>Le contenu de votre post est trop court ({{ limit }} caractères minimum)</target>
+      </segment>
+    </unit>
+    <unit id="ARUoKOV" name="comment.blank">
+      <notes>
+        <note category="state" priority="1">obsolete</note>
+      </notes>
+      <segment>
+        <source>comment.blank</source>
+        <target>Veuillez ne pas laisser votre commentaire vide.</target>
+      </segment>
+    </unit>
+    <unit id="J.L_ppQ" name="comment.too_short">
+      <notes>
+        <note category="state" priority="1">obsolete</note>
+      </notes>
+      <segment>
+        <source>comment.too_short</source>
+        <target>Votre commentaire est trop court ({{ limit }} caractères minimum)</target>
+      </segment>
+    </unit>
+    <unit id=".bkQKXb" name="comment.too_long">
+      <notes>
+        <note category="state" priority="1">obsolete</note>
+      </notes>
+      <segment>
+        <source>comment.too_long</source>
+        <target>Votre commentaire est trop long ({{ limit }} caractères maximum)</target>
+      </segment>
+    </unit>
+    <unit id="cTT8h4_" name="comment.is_spam">
+      <notes>
+        <note category="state" priority="1">obsolete</note>
+      </notes>
+      <segment>
+        <source>comment.is_spam</source>
+        <target>Le contenu de votre commentaire est considéré comme du spam.</target>
+      </segment>
+    </unit>
+  </file>
 </xliff>
