--- a/translations/validators.pt_BR.xlf
+++ b/translations/validators.pt_BR.xlf
@@ -1,39 +1,77 @@
-<?xml version="1.0"?>
-<xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-    <file source-language="en" target-language="pt-BR" datatype="plaintext" original="file.ext">
-        <body>
-            <trans-unit id="post.blank_summary">
-                <source>post.blank_summary</source>
-                <target>Informe um sumário para o seu post!</target>
-            </trans-unit>
-            <trans-unit id="post.blank_content">
-                <source>post.blank_content</source>
-                <target>Informe um conteúdo para o seu post!</target>
-            </trans-unit>
-            <trans-unit id="post.too_short_content">
-                <source>post.too_short_content</source>
-                <target>O conteúdo do post está muito curto (mínimo de {{ limit }} caracteres)</target>
-            </trans-unit>
-            <trans-unit id="post.too_many_tags">
-                <source>post.too_many_tags</source>
-                <target>Tags demais (adicione {{ limit }} tags ou menos)</target>
-            </trans-unit>
-            <trans-unit id="comment.blank">
-                <source>comment.blank</source>
-                <target>Por favor, não deixe seu comentário vazio!</target>
-            </trans-unit>
-            <trans-unit id="comment.too_short">
-                <source>comment.too_short</source>
-                <target>O comentário está muito curto (mínimo de {{ limit }} caracteres)</target>
-            </trans-unit>
-            <trans-unit id="comment.too_long">
-                <source>comment.too_long</source>
-                <target>O comentário está muito grande (máximo de {{ limit }} caracteres)</target>
-            </trans-unit>
-            <trans-unit id="comment.is_spam">
-                <source>comment.is_spam</source>
-                <target>O conteúdo desse comentário é considerado spam.</target>
-            </trans-unit>
-        </body>
-    </file>
+<?xml version="1.0" encoding="utf-8"?>
+<xliff xmlns="urn:oasis:names:tc:xliff:document:2.0" version="2.0" srcLang="en" trgLang="pt-BR">
+  <file id="validators.pt_BR">
+    <unit id="TG1D5NO" name="post.blank_summary">
+      <notes>
+        <note category="state" priority="1">obsolete</note>
+      </notes>
+      <segment>
+        <source>post.blank_summary</source>
+        <target>Informe um sumário para o seu post!</target>
+      </segment>
+    </unit>
+    <unit id="BZOzjk." name="post.blank_content">
+      <notes>
+        <note category="state" priority="1">obsolete</note>
+      </notes>
+      <segment>
+        <source>post.blank_content</source>
+        <target>Informe um conteúdo para o seu post!</target>
+      </segment>
+    </unit>
+    <unit id="S6M.YWY" name="post.too_short_content">
+      <notes>
+        <note category="state" priority="1">obsolete</note>
+      </notes>
+      <segment>
+        <source>post.too_short_content</source>
+        <target>O conteúdo do post está muito curto (mínimo de {{ limit }} caracteres)</target>
+      </segment>
+    </unit>
+    <unit id="niM7JYj" name="post.too_many_tags">
+      <notes>
+        <note category="state" priority="1">obsolete</note>
+      </notes>
+      <segment>
+        <source>post.too_many_tags</source>
+        <target>Tags demais (adicione {{ limit }} tags ou menos)</target>
+      </segment>
+    </unit>
+    <unit id="ARUoKOV" name="comment.blank">
+      <notes>
+        <note category="state" priority="1">obsolete</note>
+      </notes>
+      <segment>
+        <source>comment.blank</source>
+        <target>Por favor, não deixe seu comentário vazio!</target>
+      </segment>
+    </unit>
+    <unit id="J.L_ppQ" name="comment.too_short">
+      <notes>
+        <note category="state" priority="1">obsolete</note>
+      </notes>
+      <segment>
+        <source>comment.too_short</source>
+        <target>O comentário está muito curto (mínimo de {{ limit }} caracteres)</target>
+      </segment>
+    </unit>
+    <unit id=".bkQKXb" name="comment.too_long">
+      <notes>
+        <note category="state" priority="1">obsolete</note>
+      </notes>
+      <segment>
+        <source>comment.too_long</source>
+        <target>O comentário está muito grande (máximo de {{ limit }} caracteres)</target>
+      </segment>
+    </unit>
+    <unit id="cTT8h4_" name="comment.is_spam">
+      <notes>
+        <note category="state" priority="1">obsolete</note>
+      </notes>
+      <segment>
+        <source>comment.is_spam</source>
+        <target>O conteúdo desse comentário é considerado spam.</target>
+      </segment>
+    </unit>
+  </file>
 </xliff>
